# RemaindMe

./: .dockerignore  .example.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reqirements.txt  requirements.txt
app/: assistant_service.py  constants.py  file_service.py  keyboards.py  main.py  models.py  notify_router.py  transcribe_service.py
ollama/: Dockerfile  start.sh
