[project]
name = "remaindme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "asyncpg>=0.30.0",
    "environs>=14.2.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "py-mon>=2.1.0",
]
